# spending_tracker

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  Untitled.java  db.sqlite3  fly.toml  main.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
tracker/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
tracker/migrations/: 0001_initial.py  0002_dailyspending_category_alter_dailyspending_user.py  0002_emailotp.py  0003_alter_dailyspending_amount.py  0003_pendingregistration.py  0004_member.py
tracker/templates/: categories.html  dashboard.html  edit_transaction.html  forgot_password.html  home.html  login.html  password_reset.html  password_reset_done.html  reset_invalid.html  reset_password.html  transaction_log.html  verify_otp.html
