[project]
name = "spending-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "dj-database-url>=3.1.2",
    "django==6.0.6",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlparse==0.5.5",
    "whitenoise>=6.12.0",
]
